[gd_scene load_steps=2 format=3 uid="uid://dj8ttgc8rkpxf"]

[ext_resource type="Script" path="res://src/screens/main/team_overview/single_team/single_team.gd" id="1_jm1qh"]

[node name="SingleTeam" type="VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
anchors_preset = -1
anchor_right = 0.15625
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5
script = ExtResource("1_jm1qh")
metadata/_edit_use_anchors_ = true

[node name="Name" type="Label" parent="."]
layout_mode = 2
text = "TEAM	"
text_overrun_behavior = 3
uppercase = true

[node name="PlayerAmount" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="P" type="Label" parent="PlayerAmount"]
layout_mode = 2
text = "P 1/3"

[node name="D" type="Label" parent="PlayerAmount"]
layout_mode = 2
text = "D 1/8"

[node name="C" type="Label" parent="PlayerAmount"]
layout_mode = 2
text = "C 2/8"

[node name="A" type="Label" parent="PlayerAmount"]
layout_mode = 2
text = "A 2/6"

[node name="Budget" type="Label" parent="."]
layout_mode = 2
text = "999999"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="PlayerList" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
